@@ -77,6 +77,7 @@ By DamienMcKenna: Ensure all ksort() calls only happen on arrays.
 #2589773 by akalam: Revision log field shows when it shouldn't.
 #2579447 by LCM, DamienMcKenna: Added lots of tests for standard node workflows.
 #2579449 by mglaman, DamienMcKenna: Tests for term workflows.
+#2579451 by DamienMcKenna: Added tests for user workflows.
 
 
 Panelizer 7.x-3.2-beta1, 2015-02-02
